name:                gittens
version:             0.1.0.0
synopsis:            Web-based git interface
homepage:            http://github.com/jystic/gittens
license:             BSD3
license-file:        LICENSE
author:              Jacob Stanley
maintainer:          Jacob Stanley <jacob@stanley.io>
category:            Development
build-type:          Simple
cabal-version:       >=1.8

executable gittens
  hs-source-dirs: src
  main-is: Main.hs

  build-depends:
      base    == 4.6.*
    , conduit == 0.5.*
    , gitlib  == 0.7.*
    , warp    == 1.3.*

  ghc-options:
    -threaded -Wall
    -fwarn-tabs
    -funbox-strict-fields
    -fno-warn-unused-do-bind
