name:                gittens
version:             0.1.0.0
synopsis:            Web-based git interface
homepage:            http://github.com/jystic/gittens
license:             BSD3
license-file:        LICENSE
author:              Jacob Stanley
maintainer:          Jacob Stanley <jacob@stanley.io>
category:            Development
build-type:          Simple
cabal-version:       >=1.8

executable gittens
  hs-source-dirs: src
  main-is: Main.hs

  build-depends:
      base                  == 4.6.*
    , aeson                 == 0.6.*
    , blaze-builder         == 0.3.*
    , bytestring            == 0.10.*
    , conduit               == 0.5.*
    , gitlib                == 0.7.*
    , http-types            == 0.8.*
    , network               == 2.4.*
    , scotty                == 0.4.*
    , text                  == 0.11.*
    , transformers          == 0.3.*
    , wai                   == 1.4.*
    , wai-extra             == 1.3.*
    , wai-middleware-static == 0.3.*
    , warp                  == 1.3.*
    , system-filepath

  ghc-options:
    -threaded -Wall
    -fwarn-tabs
    -funbox-strict-fields
    -fno-warn-unused-do-bind
