name:                gittens
version:             0.1.0.0
synopsis:            Web-based git interface
homepage:            http://github.com/jystic/gittens
license:             BSD3
license-file:        LICENSE
author:              Jacob Stanley
maintainer:          Jacob Stanley <jacob@stanley.io>
category:            Development
build-type:          Simple
cabal-version:       >=1.8

executable gittens
  hs-source-dirs: src
  main-is: Main.hs

  build-depends:
      base                 == 4.6.*
    , aeson                == 0.6.*
    , attoparsec           == 0.10.*
    , bytestring           == 0.10.*
    , containers           == 0.5.*
    , gitlib               == 0.7.*
    , network              == 2.4.*
    , snap-core            == 0.9.*
    , snap-server          == 0.9.*
    , text                 == 0.11.*
    , transformers         == 0.3.*
    , unordered-containers == 0.2.*
    , system-filepath

  ghc-options:
    -threaded -Wall
    -fwarn-tabs
    -funbox-strict-fields
    -fno-warn-unused-do-bind
